--- a/src/css/login.css
+++ b/src/css/login.css
@@ -28,9 +28,15 @@ input {
     border: 1px solid #F0F1F7;
     border-radius: 8px;
     background: #FCFDFE;
+    text-indent: 4px;
+    font-size: 16px;
 }
 
-button {
+input:focus-visible {
+    outline: none;
+}
+
+.login button {
     margin: 15px 0;
     width: -webkit-fill-available;
     height: 48px;
@@ -39,5 +45,7 @@ button {
     border-radius: 8px;
     font-size: 16px;
     color: white;
+    cursor: pointer;
+    border-width: 0;
 }
 
