--- a/src/css/home.css
+++ b/src/css/home.css
@@ -2,7 +2,7 @@
     text-align: center;
     font-size: 24px;
     font-weight: 400;
-    line-height: 150px;
+    line-height: 130px;
 }
 .my-cards {
     display: flex;
@@ -18,6 +18,7 @@
 .card-informations {
     margin: 24px 0;
     text-align: center;
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 400;
+    color: var(--light-gray);
 }
