Implemented profilo page

--- a/src/css/carousel.css
+++ b/src/css/carousel.css
@@ -1,21 +1,23 @@
 .carousel-indicators button {
-    width: 12px !important;
-    height: 12px !important;
-    border-radius: 100% !important;
+  width: 12px !important;
+  height: 12px !important;
+  border-radius: 100% !important;
+  background-color: var(--light-blue) !important;
 }
 .card-image {
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
-    height: 200px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  height: 200px;
 }
 .carousel {
-    margin: 24px 0;
+  margin: 24px 0;
 }
 .carousel-indicators {
-    margin-bottom: 0;
-    bottom: -40px;
+  margin-bottom: 0;
+  bottom: -40px;
 }
-.carousel-control-next, .carousel-control-prev {
-    display: none;
+.carousel-control-next,
+.carousel-control-prev {
+  display: none;
 }
