--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 }
 
 #root {
-  background: linear-gradient(180deg, #2d71f7 0%, rgba(45, 186, 247, 0) 100%);
+  background: linear-gradient(180deg, #2d71f7 0%, rgba(45, 186, 247, 0) 50%);
   max-width: 100%;
   height: 100vh;
 }
@@ -13,6 +13,7 @@
   --light-blue: #2d71f6;
   --blue: #4185f8;
   --light-gray: rgba(0, 0, 0, 0.5);
+  --light-gray-font: #9fa2b4;
 }
 
 .font-big {
@@ -25,6 +26,12 @@
   font-size: 14px;
   line-height: 20px;
   font-weight: 600;
+}
+.font-small {
+  font-size: 12px;
+  line-height: 18px;
+  font-weight: 500;
+  color: var(--light-gray);
 }
 .font-error {
   text-align: left;
@@ -50,4 +57,41 @@
 }
 .wrapper {
   padding: 24px 24px 0;
+}
+.circleIconBig {
+  display: flex;
+  width: 128px;
+  height: 128px;
+  border: 2px solid var(--light-blue);
+  border-radius: 50%;
+  background-color: var(--blue);
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: 32px;
+}
+.circleIconSmall {
+  display: flex;
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  background-color: var(--blue);
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: 18px;
+}
+.generalButton {
+  padding: 12px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-content: center;
+  justify-content: space-between;
+  gap: 12px;
+  width: -webkit-fill-available;
+  height: 56px;
+  background-color: white;
+  box-shadow: 0px 4px 12px rgba(55, 81, 255, 0.24);
+  border-radius: 8px;
 }
